--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700|Roboto:300|Work+Sans:400,500,700');
 
+/* Common Styles */
 body {
 	/*font-family: 'Playfair Display', serif;
 	font-family: 'Roboto', sans-serif;
 	font-family: 'Work Sans', sans-serif;*/
 	font-family: 'Work Sans', sans-serif;
+	color: #5f5f5f;
+	background-color: #f6f6f6;
+	min-width: 320px;
+}
+
+.flex-container {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: center;
+	margin: 0 6%;
 }
 
 p {
@@ -17,15 +31,183 @@ p.uppercased {
 	text-transform: uppercase;
 }
 
-h1 {
+h1, h2, h3 {
 	font-family: 'Playfair Display', serif;
-	font-size: 48pt;
 	font-weight: bold;
+}
+
+h1 {
+	font-size: 48pt;
 	line-height: 60pt;
 }
 
 h2 {
-	font-family: 'Playfair Display', serif;
-	font-weight: bold;
 	font-size: 38pt;
+	color: #171717;
+}
+
+h3 {
+	font-size: 20pt;
+	color: #171717;
+}
+
+a {
+	color: #ffffff;
+	text-transform: uppercase;
+}
+
+/* Header */
+header {
+	color: #ffffff;
+	display: block;
+	flex-direction: column;
+	padding-top: 2%;
+	position: relative;
+}
+
+header::after {
+	background-image: url("../images/header-bg.jpg");
+	background-color: #cccccc;
+	opacity: .25;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	position: absolute;
+	z-index: -1;
+	content: "";
+}
+
+header .flex-container {
+
+	display: flex;
+
+	flex-direction: column;
+
+	margin: 0 6%;
+	justify-content: space-around;
+	align-items: center;
+
+}
+
+header .header-top {
+
+	display: flex;
+
+	width: 100%;
+
+	align-items: center;
+
+	justify-content: space-between;
+}
+
+header .header-main	{
+
+	text-align: center;
+
+}
+
+header ul {
+
+	display: flex;
+	list-style-type: none;
+
+}
+
+header ul li {
+
+	padding: 6px 15px;
+
+}
+
+header ul li:last-child {
+
+	padding: 6px 0;
+
+}
+
+header ul li a {
+
+	text-decoration: none;
+
+}
+
+header a:hover {
+	color: #b9b9b9;
+}
+
+header .active {
+
+	color: #b9b9b9;
+
+}
+
+.header-main p {
+
+	margin-top: 17%;
+
+	text-transform: uppercase;
+}
+
+.header-main h1 {
+	margin-top: 0;
+	margin-bottom: 22%;
+}
+
+.header-main h1 span {
+	font-weight: 400;
+	font-style: italic;
+}
+
+#header-footer a {
+	padding-top: 60px;
+}
+
+#header-footer a span {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 46px;
+	height: 46px;
+	margin-left: -23px;
+	border: 1px solid #fff;
+	border-radius: 100%;
+	box-sizing: border-box;
+}
+
+#header-footer a span:after {
+
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	content: '';
+	width: 16px;
+	height: 16px;
+	margin: -12px 0 0 -8px;
+	border-left: 1px solid #fff;
+	border-bottom: 1px solid #fff;
+	-webkit-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+	box-sizing: border-box;
+}
+
+.demo a {
+	position: relative;
+	bottom: 20px;
+	left: 50%;
+	z-index: 2;
+	display: inline-block;
+	-webkit-transform: translate(0, -50%);
+	transform: translate(0, -50%);
+	color: #fff;
+	letter-spacing: .1em;
+	text-decoration: none;
+	transition: opacity .3s;
+}
+
+.demo a:hover {
+	opacity: .5;
 }
