--- a/css/style.css
+++ b/css/style.css
@@ -58,26 +58,29 @@ a {
 
 /* Header */
 header {
-	color: #ffffff;
-	display: block;
+	color: #fff;
 	flex-direction: column;
-	padding-top: 2%;
-	position: relative;
+	position:relative;
 }
 
-header::after {
+#header-bg {
+	width: 100%;
+	height: 100%;
 	background-image: url("../images/header-bg.jpg");
-	background-color: #cccccc;
-	opacity: .25;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	position: absolute;
+	z-index: -1;
+}
+
+#header-bg:after {
+	background-color: rgba(12, 12, 12, 0.6);
 	top: 0;
 	left: 0;
 	bottom: 0;
 	right: 0;
 	position: absolute;
-	z-index: -1;
 	content: "";
 }
 
@@ -94,6 +97,8 @@ header .flex-container {
 }
 
 header .header-top {
+
+	margin-top: 2%;
 
 	display: flex;
 
