--- a/css/style.css
+++ b/css/style.css
@@ -153,9 +153,9 @@ header .active {
 
 .header-main p {
 
-margin-top: 23%;
+	margin-top: 23%;
 
-text-transform: uppercase;
+	text-transform: uppercase;
 }
 
 .header-main h1 {
@@ -223,11 +223,11 @@ text-transform: uppercase;
 
 main #about {
 
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    margin: 5% 20%;
+	flex-direction: column;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	margin: 5% 20%;
 
 }
 
@@ -242,8 +242,8 @@ main #numbers {
 
 main #numbers .flex-container {
 	
-    justify-content: space-between;
-    padding: 6% 0;
+	justify-content: space-between;
+	padding: 6% 0;
 
 }
 
@@ -264,29 +264,29 @@ main #numbers .digit {
 
 main #numbers img {
 
-    align-items: center;
-    padding: 7%;
+	align-items: center;
+	padding: 7%;
 
 }
 
 /* Best Projects */
 #best-projects .flex-container {
 
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    padding-top: 5%;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	justify-content: center;
+	padding-top: 5%;
 
 }
 
 #best-projects p {
 	
-margin-top: 0;
+	margin-top: 0;
 	
-padding: 0 11% 5%;
+	padding: 0 11% 5%;
 	
-line-height: 24pt;
+	line-height: 24pt;
 }
 
 /*#best-projects #projects {*/
@@ -295,83 +295,141 @@ line-height: 24pt;
 	/*width: 100%;*/
 	/*align-items: center;*/
 	/*background-color: #cccccc;*/
-/*}*/
+	/*}*/
 
-/*#best-projects #projects .project {*/
-	/*display: flex;*/
-	/*flex-direction: column;*/
-	/*height: 300px;*/
-	/*background-color: #921f1f;*/
-/*}*/
+	/*#best-projects #projects .project {*/
+		/*display: flex;*/
+		/*flex-direction: column;*/
+		/*height: 300px;*/
+		/*background-color: #921f1f;*/
+		/*}*/
 
-/* Flex Masonry */
-.flexbox {
-	display: -webkit-flex;
-	display: flex;
-	-webkit-flex-direction: column;
-	flex-direction: column;
-	-webkit-flex-wrap: wrap;
-	flex-wrap: wrap;
-	height: 98vw;
-}
-.flexbox p{
-	visibility: hidden;
-	color: #fff;
-	box-sizing: border-box;
-}
-.flexbox:hover img {
-	opacity: 0.6;
-}
-.flexbox .item {
-	position: relative;
-	width: 33.33%;
-}
-.flexbox .item img {
-	width: 98%;
-	box-sizing: border-box;
-	margin-bottom: 2%;
-	display: block;
-	transition: all .8s;
-}
-.flexbox .item .title {
-	position: absolute;
-	top: 48%;
-	left: 0;
-	width: 100%;
-	padding: 0 3%;
-	font-size: 30px;
-	text-shadow: 0 0 8px rgba(0, 0, 0, 0.42);
-}
-.flexbox .item:hover img {
-	opacity: 1;
+		/* Flex Masonry */
+		.flexbox {
+			display: -webkit-flex;
+			display: flex;
+			-webkit-flex-direction: column;
+			flex-direction: column;
+			-webkit-flex-wrap: wrap;
+			flex-wrap: wrap;
+			height: 98vw;
+		}
+		.flexbox p{
+			visibility: hidden;
+			color: #fff;
+			box-sizing: border-box;
+		}
+		.flexbox:hover img {
+			opacity: 0.6;
+		}
+		.flexbox .item {
+			position: relative;
+			width: 33.33%;
+		}
+		.flexbox .item img {
+			width: 98%;
+			box-sizing: border-box;
+			margin-bottom: 2%;
+			display: block;
+			transition: all .8s;
+		}
+		.flexbox .item .title {
+			position: absolute;
+			top: 48%;
+			left: 0;
+			width: 100%;
+			padding: 0 3%;
+			font-size: 30px;
+			text-shadow: 0 0 8px rgba(0, 0, 0, 0.42);
+		}
+		.flexbox .item:hover img {
+			opacity: 1;
+		}
+
+		.flexbox .item:hover p {
+			visibility: visible;
+		}
+
+		/* Testimonials */
+		main #testimonials {
+			background-image: url("../images/pattern-bg.png");
+		}
+
+		main #testimonials .flex-container {
+display: flex;
+justify-content: center;
+align-items: center;
+text-align: center;
+padding: 8% 8% 2%;
 }
 
-.flexbox .item:hover p {
-	visibility: visible;
-}
+		main #testimonials q {
+			font-family: 'Playfair Display', serif;
+			font-style: italic;
+			line-height: 36pt;
+			font-size: 30pt;
+		}
+
+		main #testimonials p {
+			color: #fff;
+			margin: 5% 0 0;
+		}
+
+		/* Owl Carousel */
+		.owl-dots {
+
+    display: flex;
+    justify-content: center;
+
+		}
+
+		.owl-dot.active {
+			outline: none;
+		}
+
+		.owl-dot.active span{
+			outline: none;
+			zoom: 1.4;
+		}
+
+		.owl-theme .owl-dots .owl-dot span {
+			background: #5b5b5b;
+		}
+
+		.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span{
+			background: #ffffff;
+		}
+
+		.owl-theme .owl-nav.disabled+.owl-dots  {
+			margin-top: 5%;
+		}
+
+		.owl-dot {outline: none;}
+		/* Owl Carousel */
 
 
 
 
 
-/* Media Queries */
 
-@media (max-width: 860px) {
-	.flexbox {
-		height: 220vw;
-	}
-	.flexbox .item {
-		width: 50%;
-	}
-}
-@media (max-width: 667px) {
-	.flexbox {
-		height: auto;
-	}
-	.flexbox .item {
-		width: 100%;
-	}
-}
+		/* Media Queries */
+
+		@media (max-width: 860px) {
+			.flexbox {
+				height: 220vw;
+			}
+			.flexbox .item {
+				width: 50%;
+			}
+		}
+		@media (max-width: 667px) {
+			.flexbox {
+				height: auto;
+			}
+			.flexbox .item {
+				width: 100%;
+			}
+		}
 
 
 
